# orchestra

./: .gitignore  LICENSE  README.md  flake.nix  meson.build
cli/include/orchestra_cli/: app.hh  util.hh
cli/source/: main.cc
cli/source/app/: app.cc
